--- a/src/app/views/contact/contact.component.html
+++ b/src/app/views/contact/contact.component.html
@@ -3,7 +3,7 @@
     <h2 class="text-4xl font-bold mb-4 text-slate-200 text-center">Get In Touch</h2>
     
     <p class="text-slate-400 mb-12 max-w-2xl mx-auto text-center">
-      I'm currently open to new opportunities. Whether you have a question or just want to say hi, I'll try my best to get back to you!
+      Feel free to reach out! Whether you have a question or just want to say hi, I’ll do my best to get back to you.
     </p>
 
     <div class="flex flex-col items-center space-y-4 max-w-xl mx-auto">
