--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<app-loading-animation>
-  <div [@fadeIn] *ngIf="showContent">
+
+  <div>
     <div class="h-[5px] bg-teal-400"></div>
 
 <div *ngIf="isLoading" class="fixed inset-0 flex items-center justify-center bg-[#0A192F] z-50">
@@ -58,4 +58,3 @@
       </footer>
     </div>
   </div>
-</app-loading-animation>
